--- a/dlthub/Dockerfile
+++ b/dlthub/Dockerfile
@@ -1,25 +1,39 @@
-# Use Python 3.14 as requested
-FROM python:3.14.2-slim
+# Stage 1: Builder
+FROM python:3.14.2-alpine AS builder
+
+# Install build dependencies
+RUN apk add --no-cache build-base
 
 # Install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-# Set working directory
 WORKDIR /app
 
 # Copy dependency files
 COPY pyproject.toml uv.lock ./
 
-# Install dependencies using uv
-RUN uv sync --frozen --no-dev
+# Install dependencies into a specific directory
+# We use --target to install directly into /app/deps, avoiding venv symlink issues
+RUN uv export --frozen --no-dev -o requirements.txt && \
+    uv pip install -r requirements.txt --target /app/deps
+
+# Stage 2: Final
+FROM python:3.14.2-alpine
+
+WORKDIR /app
+
+# Copy the dependencies from the builder
+COPY --from=builder /app/deps /app/deps
 
 # Copy source code
 COPY . .
 
-# Environment variables
-ENV PYTHONUNBUFFERED=1
-ENV CONTINUOUS=true
-ENV INTERVAL_SECONDS=600
+# Set environment variables
+# add /app/deps to PYTHONPATH so python can find the installed packages
+ENV PYTHONPATH="/app/deps" \
+    PYTHONUNBUFFERED=1 \
+    CONTINUOUS=true \
+    INTERVAL_SECONDS=600
 
-# Run the pipeline
-CMD ["uv", "run", "python", "opensky_pipeline.py"]
+# Run the pipeline using the system python
+CMD ["python", "opensky_pipeline.py"]
